--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1waqIIWy2E_9BrL-K9k9NWHrVv8dywaXC",
-      "authorship_tag": "ABX9TyO5MJOTaITJmNu7VEYGhINT",
+      "authorship_tag": "ABX9TyOSVI+9JJJ5+hE47PTsithk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,11 +58,9 @@
       },
       "source": [
         "files = [\n",
-        "    '/content/drive/MyDrive/DSGP 31/Component 3/component3_control_dataset.csv', # e.g., component3_control_dataset.csv\n",
+        "    '/content/drive/MyDrive/DSGP 31/Component 3/component3_control_dataset.csv',\n",
         "    '/content/drive/MyDrive/DSGP 31/Component 3/component3_traffic_light_phases.csv'\n",
-        "]\n",
-        "\n",
-        "# Removed the print statement as paths are now set."
+        "]"
       ],
       "execution_count": 31,
       "outputs": []
@@ -589,29 +587,26 @@
         "import os\n",
         "from google.colab import data_table # Import the interactive table tool\n",
         "\n",
-        "# The 'files' variable is now correctly defined in the previous cell (6aa0aecf) with full paths.\n",
-        "# We will use that variable here directly.\n",
-        "\n",
         "cleaned_data = None\n",
         "\n",
         "print(\"--- STARTING DATA CLEANING ---\")\n",
         "\n",
-        "for file_path in files: # Changed file_name to file_path to reflect full path usage\n",
-        "    # Extract just the file name for display purposes if needed\n",
+        "for file_path in files:\n",
+        "    # Extract file name for display\n",
         "    file_name = os.path.basename(file_path)\n",
         "\n",
-        "    # Check if file exists and is not empty\n",
+        "    # Check if file exists\n",
         "    if os.path.exists(file_path) and os.path.getsize(file_path) > 0:\n",
         "        print(f\"Processing {file_name}...\")\n",
         "        df = pd.read_csv(file_path)\n",
         "\n",
-        "        # 2. REMOVE DUPLICATES\n",
+        "        # 2. Remove duplicates\n",
         "        initial_count = len(df)\n",
         "        df = df.drop_duplicates()\n",
         "        if initial_count - len(df) > 0:\n",
         "            print(f\"   - Removed {initial_count - len(df)} duplicate rows.\")\n",
         "\n",
-        "        # 3. SELECT USEFUL COLUMNS (Filtering)\n",
+        "        # 3. Filtering\n",
         "        # We check if this is the control dataset by looking for 'complexity_score'\n",
         "        if 'complexity_score' in df.columns:\n",
         "            print(\"   - Detected Control Dataset. Selecting useful features...\")\n",
