--- a/notebooks/Linear_regression_model.ipynb
+++ b/notebooks/Linear_regression_model.ipynb
@@ -61,12 +61,46 @@
     "# 6️. Predict waiting time\n",
     "\n",
     "y_train_pred = lr.predict(X_train)\n",
-    "y_test_pred = lr.predict(X_test)\n",
-    "\n"
+    "y_test_pred = lr.predict(X_test)\n"
    ],
    "id": "bb61aabf442d1ffc",
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-07T17:22:21.149933Z",
+     "start_time": "2026-02-07T17:22:20.650814Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 7️. Evaluate model\n",
+    "\n",
+    "train_rmse = np.sqrt(mean_squared_error(y_train, y_train_pred))\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "\n",
+    "test_rmse = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
+    "test_r2 = r2_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"Linear Regression Performance:\")\n",
+    "print(f\"Train RMSE: {train_rmse:.3f}, R²: {train_r2:.3f}\")\n",
+    "print(f\"Test  RMSE: {test_rmse:.3f}, R²: {test_r2:.3f}\")\n"
+   ],
+   "id": "3707c42524818726",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression Performance:\n",
+      "Train RMSE: 19.498, R²: 0.998\n",
+      "Test  RMSE: 19.650, R²: 0.997\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -74,7 +108,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3707c42524818726"
+   "id": "a742055d8855c81"
   }
  ],
  "metadata": {
